--- a/Terminal/Terminal/Terminal.csproj
+++ b/Terminal/Terminal/Terminal.csproj
@@ -36,6 +36,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.SqlServerCe, Version=3.5.1.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -46,17 +47,38 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataSet1.cs">
+      <DependentUpon>DataSet1.xsd</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="DataSet1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DataSet1.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form_add_user.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_add_user.designer.cs">
+      <DependentUpon>Form_add_user.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form_car_number.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form_car_number.Designer.cs">
       <DependentUpon>Form_car_number.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Form_change_price.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_change_price.Designer.cs">
+      <DependentUpon>Form_change_price.cs</DependentUpon>
     </Compile>
     <Compile Include="Form_close.cs">
       <SubType>Form</SubType>
@@ -82,13 +104,27 @@
     <Compile Include="Form_open.Designer.cs">
       <DependentUpon>Form_open.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form_operator.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_operator.designer.cs">
+      <DependentUpon>Form_operator.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Test.cs" />
+    <Compile Include="User.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Form_add_user.resx">
+      <DependentUpon>Form_add_user.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form_car_number.resx">
       <DependentUpon>Form_car_number.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_change_price.resx">
+      <DependentUpon>Form_change_price.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form_close.resx">
       <DependentUpon>Form_close.cs</DependentUpon>
@@ -102,6 +138,9 @@
     <EmbeddedResource Include="Form_open.resx">
       <DependentUpon>Form_open.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Form_operator.resx">
+      <DependentUpon>Form_operator.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -111,6 +150,18 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="app.config" />
+    <None Include="DataSet1.xsc">
+      <DependentUpon>DataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="DataSet1.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>DataSet1.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="DataSet1.xss">
+      <DependentUpon>DataSet1.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -120,6 +171,14 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Database1.sdf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
