--- a/Terminal/Terminal/Terminal.csproj
+++ b/Terminal/Terminal/Terminal.csproj
@@ -174,7 +174,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Database1.sdf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <ItemGroup>
