--- a/Terminal/Terminal/Terminal.csproj
+++ b/Terminal/Terminal/Terminal.csproj
@@ -33,6 +33,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>img-cam.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="SkinSoft.VisualStyler, Version=2.4.0.0, Culture=neutral, PublicKeyToken=0fda9f423e1d9830, processorArchitecture=MSIL" />
     <Reference Include="System" />
@@ -111,6 +114,18 @@
     <Compile Include="Form_operator.designer.cs">
       <DependentUpon>Form_operator.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form_user_info.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_user_info.Designer.cs">
+      <DependentUpon>Form_user_info.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Log.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Log.Designer.cs">
+      <DependentUpon>Log.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Test.cs" />
@@ -141,6 +156,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form_operator.resx">
       <DependentUpon>Form_operator.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_user_info.resx">
+      <DependentUpon>Form_user_info.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Log.resx">
+      <DependentUpon>Log.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -177,6 +198,7 @@
     <Content Include="Database1.sdf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="img-cam.ico" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
